--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url('/image/bckgnd2.jpeg');
+    background-image: url('../image/bckgnd2.jpeg');
     background-color: darkgreen;
     background-origin: content-box;
     background-size: cover;
